--- a/lib/email/templates/ejavec-lupa-password.handlebars
+++ b/lib/email/templates/ejavec-lupa-password.handlebars
@@ -7,7 +7,7 @@
     <!-- For development, pass document through inliner -->
     <link rel="stylesheet" href="/styles/simple.css" />
     <title>
-      KODE VERIFIKASI! EJAVEC Forum 2022 - Call for Paper & Sharia Conference.
+      KODE PASSWORD! EJAVEC Forum 2022 - Call for Paper & Sharia Conference.
     </title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i"
