submission for user done (recheck email for submit data)

--- a/lib/email/templates/ejavec-notif-lolos.handlebars
+++ b/lib/email/templates/ejavec-notif-lolos.handlebars
@@ -24,7 +24,7 @@
             <table>
                 <tr>
                   <td align="center" class="masthead">
-                      <img align="left" alt="ejavec-logo" src="/images/ejavec-forum-email-logo.png" width="181" style="max-width:181px; padding-left: 35px; display: inline !important;">
+                      <img align="left" alt="ejavec-logo" src="cid:ejavec-forum-email-logo" width="181" style="max-width:181px; padding-left: 35px; display: inline !important;">
                   </td>
                 </tr>
                 <tr>
