--- a/lib/email/templates/ejavec-notif-submit.handlebars
+++ b/lib/email/templates/ejavec-notif-submit.handlebars
@@ -25,7 +25,7 @@
                 <tr>
                     <td align="center" class="masthead">
 
-                        <img align="left" alt="ejavec-logo" src="/images/ejavec-forum-email-logo.png" width="181" style="max-width:181px; padding-left: 35px; display: inline !important;">
+                        <img align="left" alt="ejavec-logo" src="cid:ejavec-forum-email-logo" width="181" style="max-width:181px; padding-left: 35px; display: inline !important;">
 
                     </td>
                 </tr>
