--- a/lib/email/templates/ejavec-verifikasi.handlebars
+++ b/lib/email/templates/ejavec-verifikasi.handlebars
@@ -29,7 +29,7 @@
                 <img
                   text-align="left"
                   alt="ejavec-logo"
-                  src="https://submission.ejavec.org/email_template/images/ejavec-forum-email-logo.png"
+                  src="cid:ejavec-forum-email-logo"
                   width="181"
                   style="
                     max-width: 181px;
