change a bit for SHaria

--- a/lib/email/templates/ejavec-registrasi.handlebars
+++ b/lib/email/templates/ejavec-registrasi.handlebars
@@ -42,7 +42,7 @@
             <tr>
               <td class="content">
                 <h2 style="padding-bottom: 25px; color: #004d83">
-                  Hai {{ nama }}. Selamat datang di 9<sup
+                  Selamat datang di 9<sup
                     style="
                       font-size: 75%;
                       line-height: 0;
@@ -53,6 +53,7 @@
                   EJAVEC Forum 2022 - Call for Paper & Sharia Conference.
                 </h2>
 
+                <p>Hai, <i><b>{{ nama }}</b></i></p>
                 <p>Berikut ini kode verifikasi Anda:</p>
                 <h3>{{ kode }}</h3>
 
