add backend function for sending success/failed notification + updating the email template

--- a/lib/email/templates/ejavec-notif-lolos.handlebars
+++ b/lib/email/templates/ejavec-notif-lolos.handlebars
@@ -30,15 +30,15 @@
                 <tr>
                     <td class="content">
 
-                        <h4 style="padding-bottom: 30px;">Kepada: {{ Nama }}</h4>
+                        <h4 style="padding-bottom: 30px;">Kepada: {{ nama }}</h4>
                         
                         <h2 style="padding-bottom: 25px; color: #004d83">Selamat! Anda lolos ke tahap presentasi.</h2>
 
                         <p><b>Judul:</b><br>
-                        {{ Judul }}.</p>
+                        {{ judul }}.</p>
 
                         <p><b>Sub Tema:</b><br>
-                        {{ SubTema }}.</p>
+                        {{ subTema }}.</p>
 
                         <p><b>No. Registrasi: {{ NoReg }}</b></p>
 
