--- a/lib/email/templates/ejavec-notif-tidaklolos.handlebars
+++ b/lib/email/templates/ejavec-notif-tidaklolos.handlebars
@@ -32,7 +32,7 @@
                 <tr>
                     <td class="content">
 
-                        <h4 style="padding-bottom: 30px;">Kepada: {{ Nama }}</h4>
+                        <h4 style="padding-bottom: 30px;">Kepada: {{ nama }}</h4>
                         
                         <h2 style="padding-bottom: 25px; color: #004d83">Mohon maaf! Anda tidak lolos ke tahap presentasi.</h2>
 
