change submission date

--- a/lib/email/templates/ejavec-notif-submit.handlebars
+++ b/lib/email/templates/ejavec-notif-submit.handlebars
@@ -34,7 +34,10 @@
 
                         <!-- <h4 style="padding-bottom: 30px;">Kepada: %nama%</h4> -->
                         
-                        <h2 style="padding-bottom: 25px; color: #004d83">Hai {{ nama }}. Terima Kasih! Full paper Anda telah terkirim.</h2>
+                        <h2 style="padding-bottom: 25px; color: #004d83">Terima Kasih! Full paper Anda telah terkirim.</h2>
+
+                        <p><b>Kepada:</b><br>
+                        {{ nama }}</p>
 
                         <p><b>Judul:</b><br>
                         {{ judul }}</p>
