notif lolos tidak lolos

--- a/lib/email/templates/ejavec-notif-tidaklolos.handlebars
+++ b/lib/email/templates/ejavec-notif-tidaklolos.handlebars
@@ -31,10 +31,10 @@
                 </tr>
                 <tr>
                     <td class="content">
-
-                        <h4 style="padding-bottom: 30px;">Kepada: {{ nama }}</h4>
                         
                         <h2 style="padding-bottom: 25px; color: #004d83">Mohon maaf! Anda tidak lolos ke tahap presentasi.</h2>
+
+                        <p><b>Kepada: {{ nama }}</p></b>
 
                         <p><b>Judul:</b><br>
                         {{ judul }}.</p>
