--- a/lib/email/templates/ejavec-notif-lolos.handlebars
+++ b/lib/email/templates/ejavec-notif-lolos.handlebars
@@ -6,7 +6,7 @@
 
     <!-- For development, pass document through inliner -->
     <link rel="stylesheet" href="/styles/simple.css" />
-    <title>LOLOS! EJAVEC FORUM 2022- Call for Paper</title>
+    <title>LOLOS! EJAVEC Forum 2023- Call for Paper</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
 
     <style type="text/css">
@@ -61,7 +61,7 @@
                                 <td style="padding-top: 35px">
                                     <p>
                                     Salam,<br>
-                                    <b>Panitia 9<sup style="font-size:75%;line-height:0;vertical-align:0.4em;">th</sup> EJAVEC FORUM 2022 - Call for Paper & Sharia Conference.</b>
+                                    <b>Panitia 10<sup style="font-size:75%;line-height:0;vertical-align:0.4em;">th</sup> EJAVEC Forum 2023 - Call for Paper & Sharia Conference.</b>
                                     </p>
                                 </td>
                             </tr>
